# MARC

./: Makefile  Makefile.am  Makefile.in  README.txt  ToDoList.txt  config.guess  config.h  config.h.in  config.status  configure  configure.ac  libtool  rebuild.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
docs/: MARC.doc
include/event2/: event-config.h
lib/: libevent.lib
src/: Makefile  Makefile.am  Makefile.in
src/marc/: ClientManager.cpp  ClientManager.h  ClientNode.cpp  ClientNode.h  HttpServer.cpp  HttpServer.h  Makefile  Makefile.am  Makefile.in  MasterListener.cpp  MasterListener.h  MasterNode.cpp  MasterNode.h  ResultNode.cpp  ResultNode.h  ResultNodeManager.cpp  ResultNodeManager.h  TaskManager.cpp  TaskManager.h  TypeDefs.cpp  TypeDefs.h  main.cpp
src/myzip/: Makefile  Makefile.am  Makefile.in  MyZip.cpp  MyZip.h  main.cpp
src/sftp/: Makefile  Makefile.am  Makefile.in  sftp_client.cpp  sftp_client.h  sftp_global.h  sftp_server.cpp  sftp_server.h  sftp_test.cpp
src/utils/: AppRunner.cpp  AppRunner.h  DirScanner.cpp  DirScanner.h  ExecTest.cpp  IniFile.cpp  IniFile.h  LoopThread.cpp  LoopThread.h  Makefile  Makefile.am  Makefile.in  Network.cpp  Network.h  RunLogger.cpp  RunLogger.h  StdHeader.h  SystemMacroDef.h  Utility.cpp  Utility.h  kbhit.cpp  kbhit.h  myIniFile.cpp  myIniFile.h  opendir.cpp  opendir.h
win32/: marc.ncb  marc.sln
win32/MARC/: MARC.vcproj
win32/myzip/: MyZip.vcproj
win32/myzip/Debug/: BuildLog.htm
win32/myzip/Release/: BuildLog.htm
win32/sftp/: sftp.vcproj
win32/sftp_test/: sftp_test.vcproj
win32/sftp_test/Debug/: BuildLog.htm
win32/sftp_test/Release/: BuildLog.htm
win32/utils/: ReadMe.txt  utils.vcproj
win32/utils/Debug/: BuildLog.htm
win32/utils/Release/: BuildLog.htm
