noinst_LTLIBRARIES = libutils.la
#bin_PROGRAMS = ExecTest

libutils_la_CPPFLAGS =
libutils_la_SOURCES = AppRunner.cpp IniFile.cpp kbhit.cpp LoopThread.cpp myIniFile.cpp opendir.cpp Utility.cpp RunLogger.cpp DirScanner.cpp Network.cpp
libutils_la_LIBADD = -lpthread

#ExecTest_CPPFLAGS = 
#ExecTest_SOURCES = ExecTest.cpp
#ExecTest_LDADD = libutils.la
